Fix #1: update project and Stream usage for Java 17
Agent-Logs-Url: https://github.com/gishi-yama/Stream-Lambda-HandsOn/sessions/db5a01fa-7702-4d07-a346-67740e3e0125

Co-authored-by: gishi-yama <1794095+gishi-yama@users.noreply.github.com>